--- a/app/index.html
+++ b/app/index.html
@@ -24,33 +24,23 @@
         <![endif]-->
 
     		<div class="header_area">
-            <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <a class="logo" href="#"><img src="img/logo.jpg" alt=""></a>
+                        <a class="logo" href="#"><img src="img/logo.png" alt=""></a>
                         <div class="menu-button"><span>Menu</span></div>
                         <div class="menu_holder">
                             <ul data-breakpoint="768" class="flexnav">
-                                <li><a href="#">Home</a> </li>
-                                <li><a href="#">Comapany</a>
-                                    <ul>
-                                        <li><a href="#">About Us</a></li>
-                                        <li><a href="#">Investment Strategy </a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="#">Team</a> 
-                                    <ul>
-                                      <li><a href="#">as </a></li>
-                                      <li><a href="#">asf </a></li>
-                                    </ul>
-                                </li>
+                                <li><a href="#">Our Partners</a> </li>
+                                <li><a href="#">Who we are</a></li>
+                                <li><a href="#">Media & Events</a></li>
                                 <li><a href="#">Contact</a></li>
+                                <li><a href="#">Members Area</a></li>
+                                <li><a href="#">Donate</a></li>
                             </ul>                
                         </div>           
 
                     </div>
                 </div>
-            </div>
     	
     		</div>
 
