After donate section on homepage

--- a/app/index.html
+++ b/app/index.html
@@ -23,9 +23,10 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
         <![endif]-->
 
-    		<div class="header_area">
-                <div class="row">
-                    <div class="col-md-12">
+    	<div class="header_area">
+            <div class="container">
+                <div class="row  ">
+                    <div class="col-md-12 align-self-center">
                         <a class="logo" href="#"><img src="img/logo.png" alt=""></a>
                         <div class="menu-button"><span>Menu</span></div>
                         <div class="menu_holder">
@@ -41,51 +42,26 @@
 
                     </div>
                 </div>
-    	
-    		</div>
-
-
-
-        <div class="slider_area">
-            <div class="row">
-                <div class="col-md-12">
-                    <img src="img/slider.jpeg" alt="">
-                </div>
             </div>
-        </div>
+    	
+    	</div>
+
 		
-        <div class="home_content_area">
+        <div class="home_donate_area">
             <div class="container">
-                <div class="row">
+                <div class="row align-items-center">
 
                     <div class="col-md-4">
-                        <div class="image_section">
-                            <img src="img/Company Button.jpeg" alt="">
-                        </div>
                         <div class="text_section">
-                            <h3 class="title">Company</h3>
-                            <p>Celenian Capital is a Florida based Investment Management and Research Firm.</p>
+                            <h2 class="blue_with_yellow">Transforming unwanted uniforms into clothes for childer in need.</h3>
+                            <p>Through uniforms 4 Kids we are closing the gap between those serving in uniform, our communities and children. The program sees the uniforms continue to protect and serve. </p>
+                            <a href="#" class="blue_yellow">Donate Now</a>
                         </div>
                     </div>
 
-                    <div class="col-md-4">
-                        <div class="image_section">
-                            <img src="img/team-button.jpg" alt="">
-                        </div>
-                        <div class="text_section">
-                            <h3 class="title">Team</h3>
-                            <p>Celenian Capital is a Florida based Investment Management and Research Firm.</p>
-                        </div>
-                    </div>
 
-                    <div class="col-md-4">
-                        <div class="image_section">
-                            <img src="img/Contact-button.jpeg" alt="">
-                        </div>
-                        <div class="text_section">
-                            <h3 class="title">Contact Us</h3>
-                            <p>Celenian Capital is a Florida based Investment Management and Research Firm.</p>
-                        </div>
+                    <div class="col-md-8">
+                        <img src="img/school_boy.png" alt="">
                     </div>
                 </div>
             </div>       
