--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,8 @@
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>      
+        <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+        <link href="https://fonts.googleapis.com/css?family=Kanit:400,500,700,800,900" rel="stylesheet">     
     </head>
 
     <body>
@@ -44,7 +45,6 @@
                             </ul>                
                         </div>           
 
-                    </div>
                 </div>
             </div>
     	
@@ -52,12 +52,16 @@
 
 		
         <div class="home_hero_area">
+                    </div>
             <div class="container">
                 <div class="row align-items-center">
 
                     <div class="col-md-4">
                         <div class="text_section">
-                            <h2 class="blue_with_yellow">Transforming unwanted uniforms into clothes for childer in need.</h3>
+                            <h2 class="blue_with_yellow">Transforming</h2>
+                            <h2 class="blue_with_yellow">unwanted uniforms </h2>
+                            <h2 class="blue_with_yellow">into clothes for </h2>
+                            <h2 class="blue_with_yellow">childer in need.</h2>
                             <p>Through uniforms 4 Kids we are closing the gap between those serving in uniform, our communities and children. The program sees the uniforms continue to protect and serve. </p>
                             <a href="#" class="blue_yellow">Donate Now</a>
                         </div>
