--- a/app/index.html
+++ b/app/index.html
@@ -120,23 +120,18 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2 class="white_yellow">Why we do it</h2>
+                        <h2 class="white_text_red_bg fw_900 m_b_50">Why we do it</h2>
 
                         <div class="slider">
 
                             <div>
-                                <div class="image_holder"><img src="img/blog_img.png" alt=""></div>
-                                <div class="text_holder">
-                                    <p class="text">Since getting this new clothes, I no longer worry about getting bullied at school. I feel like I can finally fit in!</p>
-                                    <p class="name">Anthony, 7 years old,Capalaba Queensland</p>
-                                </div>
-                            </div>
 
-                            <div>
-                                <div class="image_holder"><img src="img/blog_img.png" alt=""></div>
                                 <div class="text_holder">
                                     <p class="text">Since getting this new clothes, I no longer worry about getting bullied at school. I feel like I can finally fit in!</p>
                                     <p class="name">Anthony, 7 years old,Capalaba Queensland</p>
+
+                                    <div class="testimonial_image_holder"><img src="img/cropped.png" alt=""></div>
+
                                 </div>
                             </div>
 
