--- a/app/index.html
+++ b/app/index.html
@@ -127,12 +127,25 @@
                             <div>
 
                                 <div class="text_holder">
-                                    <p class="text">Since getting this new clothes, I no longer worry about getting bullied at school. I feel like I can finally fit in!</p>
-                                    <p class="name">Anthony, 7 years old,Capalaba Queensland</p>
+                                    <p class="testimonial_text">Since getting this new clothes, I no longer worry about getting bullied at school. I feel like I can finally fit in!</p>
+                                    <p class="testi_client_name">Anthony, 7 years old,Capalaba Queensland</p>
 
                                     <div class="testimonial_image_holder"><img src="img/cropped.png" alt=""></div>
 
                                 </div>
+
+                            </div>
+
+                            <div>
+
+                                <div class="text_holder">
+                                    <p class="testimonial_text">Since getting this new clothes, I no longer worry about getting bullied at school. I feel like I can finally fit in!</p>
+                                    <p class="testi_client_name">Anthony, 7 years old,Capalaba Queensland</p>
+
+                                    <div class="testimonial_image_holder"><img src="img/cropped.png" alt=""></div>
+
+                                </div>
+
                             </div>
 
 
