Working from Desktop

--- a/app/index.html
+++ b/app/index.html
@@ -120,7 +120,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2 class="white_text_red_bg fw_900 m_b_50">Why we do it</h2>
+                        <h2 class="white_text_yellow_bg fw_900 m_b_50">Why we do it</h2>
 
                         <div class="slider">
 
