After footer done

--- a/app/index.html
+++ b/app/index.html
@@ -120,7 +120,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2 class="white_text_yellow_bg fw_900 m_b_50">Why we do it</h2>
+                        <h2 class="white_text_yellow_bg fw_900 m_b_50 fz_45 lh_35">Why we do it</h2>
 
                         <div class="slider">
 
@@ -160,12 +160,12 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4">
-                        <h2 class="yellow_white">Stay up to date</h2>
+                        <h2 class="white_text_yellow_bg fw_900 m_b_50 fz_45 lh_35">Stay up to date</h2>
                     </div>
                     <div class="col-md-8">
                         <form action="">
-                            <input class="email" type="text">
-                            <input type="submit" value="Subscribe">
+                            <input class="email" type="email" placeholder="Email Address">
+                            <input type="submit" value="Subscribe" class="white_box_shadow hvr_fade_yellow fw_700 fz_25 ">
                         </form>
                     </div>
                 </div>
@@ -180,10 +180,10 @@
                 <div class="row">
 
                     <div class="col-md-6">
-                        <img src="img/footer_logo.png" alt="">
+                        <img class="footer_logo" src="img/footer_logo.png" alt="">
                     </div>
                     <div class="col-md-3">
-                        <h3 class="white_gray">Follow us</h3>
+                        <h3 class="white_text_gray_bg fw_900 fz_35 lh_20 footer_column_heading">Follow us</h3>
                         <ul class="footer_links">
                             <li><a href="#">Facebook</a></li>
                             <li><a href="#">Instagram</a></li>
@@ -191,7 +191,7 @@
                         </ul>
                     </div>
                     <div class="col-md-3">
-                        <h3 class="white_gray">Support us</h3>
+                        <h3 class="white_text_gray_bg fw_900 fz_35 lh_20 footer_column_heading">Support us</h3>
                         <ul class="footer_links">
                             <li><a href="#">Donate</a></li>
                             <li><a href="#">Partner with us</a></li>
@@ -206,8 +206,15 @@
 
 
         <div class="footer_bottom_area">
-            <hr>
-            <p>&copy; Uniform 4 Kids 2018</p>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <hr class="gray_line">
+                        <p class="muse_font">&copy; Uniform 4 Kids 2018</p>                        
+                    </div>
+                </div>
+            </div>
+
         </div>
 
 
