--- a/app/index.html
+++ b/app/index.html
@@ -30,18 +30,31 @@
 
     	<div class="header_area">
             <div class="container">
-                <div class="row  ">
+                <div class="row ">
                     <div class="col-md-12 align-self-center">
-                        <a class="logo" href="#"><img src="img/logo.png" alt=""></a>
-                        <div class="menu-button"><span>Menu</span></div>
+                        <div class="logo_menu_button_holder">
+                            <a class="logo" href="#"><img src="img/logo.png" alt=""></a>
+                                <div class="menu-button">
+                                    <div id="nav-icon3">
+                                      <span></span>
+                                      <span></span>
+                                      <span></span>
+                                      <span></span>
+                                    </div>                            
+
+                                </div>
+                           
+
+                        </div>
+
                         <div class="menu_holder">
                             <ul data-breakpoint="768" class="flexnav">
-                                <li><a href="#">Our Partners</a> </li>
-                                <li><a href="#">Who we are</a></li>
-                                <li><a href="#">Media & Events</a></li>
-                                <li><a href="#">Contact</a></li>
-                                <li><a href="#">Members Area</a></li>
-                                <li><a href="#">Donate</a></li>
+                                <li><a class="hvr-underline-from-center" href="#">Our Partners</a> </li>
+                                <li><a class="hvr-underline-from-center" href="#">Who we are</a></li>
+                                <li><a class="hvr-underline-from-center" href="#">Media & Events</a></li>
+                                <li><a class="hvr-underline-from-center" href="#">Contact</a></li>
+                                <li><a class="hvr-underline-from-center" href="#">Members Area</a></li>
+                                <li><a class="hvr-underline-from-center" href="#">Donate</a></li>
                             </ul>                
                         </div>           
 
@@ -253,7 +266,9 @@
 
                 $('.slider').bxSlider();
 
-
+                $('#nav-icon1,#nav-icon2,#nav-icon3,#nav-icon4').click(function(){
+                    $(this).toggleClass('open');
+                });
 			});
 		
 	    </script>
