After menu works

--- a/app/index.html
+++ b/app/index.html
@@ -260,9 +260,21 @@
 			jQuery(document).ready(function($) {
 				
 				// initialize FlexNav
+                /*
+                $(".flexnav").flexNav({
+                    'transitionSpeed' : '1.6s', 'itemHeight': 50,
+                    'animationSpeed':     650, 
+                });
+                */
+
+
 				$(".flexnav").flexNav({
-					'transitionSpeed' : '0.4s', 'itemHeight': 50
+					'animationSpeed' : 1000,
 				});
+
+
+
+
 
                 $('.slider').bxSlider();
 
