--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
         <![endif]-->
 
     	<div class="header_area">
-            <div class="container">
+            <div class="">
                 <div class="row ">
                     <div class="col-md-12 align-self-center">
                         <div class="logo_menu_button_holder">
@@ -62,6 +62,7 @@
             </div>
     	
     	</div>
+    </div>
 
 		
         <div class="home_hero_area">
@@ -87,7 +88,7 @@
             </div>
         </div>      
 
-        </div> <!-- End Home Content Area -->
+       
 
         <div class="blog_area featured_blog_area">
             <div class="container">
