--- a/app/index.html
+++ b/app/index.html
@@ -66,10 +66,10 @@
 
 		
         <div class="home_hero_area">
-            <div class="container">
+            <div class="custom_container">
                 <div class="row align-items-center">
 
-                    <div class="col-md-4">
+                    <div class="col-md-6 pad_0_10 m_m_b_15">
                         <div class="text_section">
                             <h2 class="blue_text_with_yellow_bg black_900">Transforming</h2>
                             <h2 class="blue_text_with_yellow_bg black_900">unwanted uniforms </h2>
@@ -81,7 +81,7 @@
                     </div>
 
 
-                    <div class="col-md-8">
+                    <div class="col-md-6">
                         <img src="img/school_boy.png" alt="">
                     </div>
                 </div>
@@ -140,7 +140,7 @@
 
                             <div>
 
-                                <div class="text_holder">
+                                <div class="text_holder ">
                                     <p class="testimonial_text">Since getting this new clothes, I no longer worry about getting bullied at school. I feel like I can finally fit in!</p>
                                     <p class="testi_client_name">Anthony, 7 years old,Capalaba Queensland</p>
 
@@ -173,10 +173,10 @@
         <div class="email_area">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-sm-12 col-md-12 col-lg-4">
                         <h2 class="white_text_yellow_bg fw_900 m_b_50 fz_45 lh_35">Stay up to date</h2>
                     </div>
-                    <div class="col-md-8">
+                    <div class="col-sm-12 col-md-12 col-lg-8">
                         <form action="">
                             <input class="email" type="email" placeholder="Email Address">
                             <input type="submit" value="Subscribe" class="white_box_shadow hvr_fade_yellow fw_700 fz_25 ">
